--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
           <a class="header-logo" href="./index.html"
             >Web<span class="addition">Studio</span></a
           >
-          <ul class="header-link-list">
+
+          <ul class="menu">
             <li class="header-link-item">
               <a class="header-link current-page" href="./index.html">Studio</a>
             </li>
@@ -37,6 +38,15 @@
             </li>
           </ul>
         </nav>
+
+        <div class="mobile-menu-button-container">
+          <button class="mobile-menu-button" type="button">
+            <svg class="mobile-menu-button-icon" width="24" height="24">
+              <use href="./images/icons.svg#icon-heroicon"></use>
+            </svg>
+          </button>
+        </div>
+
         <address class="contacts">
           <ul class="header-contact-list">
             <li>
@@ -67,7 +77,7 @@
 
       <!-- Section 2 Benefits-->
 
-      <section class="section benefits-section">
+      <section class="section">
         <div class="container">
           <h2 class="section-title visually-hidden">Our benefits</h2>
           <ul class="benefits-list">
@@ -377,12 +387,7 @@
           <ul class="projects-list">
             <li class="card-portfolio">
               <div class="img-box">
-                <img
-                  src="./images/banking-app.jpg"
-                  alt="Banking App"
-                  width="360"
-                  height="300"
-                />
+                <img src="./images/banking-app.jpg" alt="Banking App" />
                 <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -399,8 +404,6 @@
                 <img
                   src="./images/cashless-payment.jpg"
                   alt="Cashless Payment"
-                  width="360"
-                  height="300"
                 />
                 <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
@@ -415,12 +418,7 @@
             </li>
             <li class="card-portfolio">
               <div class="img-box">
-                <img
-                  src="./images/meditation-app.jpg"
-                  alt="Meditation App"
-                  width="360"
-                  height="300"
-                />
+                <img src="./images/meditation-app.jpg" alt="Meditation App" />
                 <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -434,12 +432,7 @@
             </li>
             <li class="card-portfolio">
               <div class="img-box">
-                <img
-                  src="./images/taxi-service.jpg"
-                  alt="Taxi Service"
-                  width="360"
-                  height="300"
-                />
+                <img src="./images/taxi-service.jpg" alt="Taxi Service" />
                 <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -456,8 +449,6 @@
                 <img
                   src="./images/screen-illustrations.jpg"
                   alt="Screen Illustrations"
-                  width="360"
-                  height="300"
                 />
                 <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
@@ -472,12 +463,7 @@
             </li>
             <li class="card-portfolio">
               <div class="img-box">
-                <img
-                  src="./images/online-courses.jpg"
-                  alt="Online Courses"
-                  width="360"
-                  height="300"
-                />
+                <img src="./images/online-courses.jpg" alt="Online Courses" />
                 <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -586,7 +572,7 @@
 
     <!-- Modal window -->
 
-    <div class="modal-backdrop is-open">
+    <div class="modal-backdrop">
       <div class="modal-window">
         <button class="button-close" type="button">
           <svg class="button-icon" width="8" height="8">
@@ -671,6 +657,99 @@
           </div>
           <button class="button-order" type="submit">Send</button>
         </form>
+      </div>
+    </div>
+
+    <!-- Modal window for mobile menu -->
+
+    <div class="modal-window-mobile-menu">
+      <div class="form-mobile-menu">
+        <button class="button-close menu-button" type="button">
+          <svg class="button-icon" width="8" height="8">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+        <div class="modal-menu-container">
+          <ul class="modal-menu">
+            <li class="modal-header-link-item">
+              <a
+                class="modal-header-link modal-current-page"
+                href="./index.html"
+                >Studio</a
+              >
+            </li>
+            <li class="modal-header-link-item">
+              <a class="modal-header-link" href="">Portfolio</a>
+            </li>
+            <li class="modal-header-link-item">
+              <a class="modal-header-link" href="">Contacts</a>
+            </li>
+          </ul>
+          <address class="modal-contacts">
+            <ul class="modal-header-contact-list">
+              <li>
+                <a class="modal-contacts-link" href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li>
+                <a
+                  class="modal-contacts-link modal-phone"
+                  href="tel:+110001111111"
+                  >+11 (000) 111-11-11</a
+                >
+              </li>
+            </ul>
+          </address>
+          <div>
+            <ul class="modal-social-links-list">
+              <li class="social-links-container">
+                <a
+                  href="https://www.instagram.com/"
+                  target="_blank"
+                  class="social-link modal-social-link"
+                >
+                  <svg class="social-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-links-container">
+                <a
+                  href="https://www.twitter.com/"
+                  target="_blank"
+                  class="social-link modal-social-link"
+                >
+                  <svg class="social-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-links-container">
+                <a
+                  href="https://www.facebook.com/"
+                  target="_blank"
+                  class="social-link modal-social-link"
+                >
+                  <svg class="social-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-links-container">
+                <a
+                  href="https://www.linkedin.com/"
+                  target="_blank"
+                  class="social-link modal-social-link"
+                >
+                  <svg class="social-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </div>
   </body>
