--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet"
     href=https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css
     />
+    <link rel="stylesheet" href="./css/index.css" />
     <link rel="stylesheet" href="./css/styles.css" />
     <title>WebStudio</title>
   </head>
@@ -41,7 +42,12 @@
 
         <div class="mobile-menu-button-container">
           <button class="mobile-menu-button" type="button">
-            <svg class="mobile-menu-button-icon" width="24" height="24">
+            <svg
+              class="mobile-menu-button-icon"
+              width="24"
+              height="24"
+              aria-label="mobile menu open icon"
+            >
               <use href="./images/icons.svg#icon-heroicon"></use>
             </svg>
           </button>
@@ -142,7 +148,8 @@
             <!-- Mark Guerrero -->
             <li class="personnel-list-item">
               <img
-                src="./images/Mark.jpg"
+                srcset="./images/mark@1x.jpg 1x, ./images/mark@2x.jpg 2x"
+                src="./images/mark@1x.jpg"
                 alt="Photo Mark"
                 width="264"
                 height="260"
@@ -201,7 +208,8 @@
             <!-- Tom Ford -->
             <li class="personnel-list-item">
               <img
-                src="./images/Tom.jpg"
+                srcset="./images/tom@1x.jpg 1x, ./images/tom@2x.jpg 2x"
+                src="./images/tom@1x.jpg"
                 alt="Photo Tom"
                 width="264"
                 height="260"
@@ -260,7 +268,8 @@
             <!-- Camila Garcia -->
             <li class="personnel-list-item">
               <img
-                src="./images/Camila.jpg"
+                srcset="./images/camila@1x.jpg 1x, ./images/camila@2x.jpg 2x"
+                src="./images/camila@1x.jpg"
                 alt="Photo Camila"
                 width="264"
                 height="260"
@@ -319,7 +328,8 @@
             <!-- Daniel Wilson -->
             <li class="personnel-list-item">
               <img
-                src="./images/Daniel.jpg"
+                srcset="./images/daniel@1x.jpg 1x, ./images/daniel@2x.jpg 2x"
+                src="./images/daniel@1x.jpg"
                 alt="Photo Daniel"
                 width="264"
                 height="260"
@@ -387,7 +397,14 @@
           <ul class="projects-list">
             <li class="card-portfolio">
               <div class="img-box">
-                <img src="./images/banking-app.jpg" alt="Banking App" />
+                <img
+                  srcset="
+                    ./images/banking-app@1x.jpg 1x,
+                    ./images/banking-app@2x.jpg 2x
+                  "
+                  src="./images/banking-app@1x.jpg"
+                  alt="Banking App"
+                />
                 <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -402,7 +419,11 @@
             <li class="card-portfolio">
               <div class="img-box">
                 <img
-                  src="./images/cashless-payment.jpg"
+                  srcset="
+                    ./images/cashless-payment@1x.jpg 1x,
+                    ./images/cashless-payment@2x.jpg 2x
+                  "
+                  src="./images/cashless-payment@1x.jpg"
                   alt="Cashless Payment"
                 />
                 <p class="overlay">
@@ -418,7 +439,14 @@
             </li>
             <li class="card-portfolio">
               <div class="img-box">
-                <img src="./images/meditation-app.jpg" alt="Meditation App" />
+                <img
+                  srcset="
+                    ./images/meditation-app@1x.jpg 1x,
+                    ./images/meditation-app@2x.jpg 2x
+                  "
+                  src="./images/meditation-app@1x.jpg"
+                  alt="Meditation App"
+                />
                 <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -432,7 +460,14 @@
             </li>
             <li class="card-portfolio">
               <div class="img-box">
-                <img src="./images/taxi-service.jpg" alt="Taxi Service" />
+                <img
+                  srcset="
+                    ./images/taxi-service@1x.jpg 1x,
+                    ./images/taxi-service@2x.jpg 2x
+                  "
+                  src="./images/taxi-service@1x.jpg"
+                  alt="Taxi Service"
+                />
                 <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -447,7 +482,11 @@
             <li class="card-portfolio">
               <div class="img-box">
                 <img
-                  src="./images/screen-illustrations.jpg"
+                  srcset="
+                    ./images/screen-illustrations@1x.jpg 1x,
+                    ./images/screen-illustrations@2x.jpg 2x
+                  "
+                  src="./images/screen-illustrations@1x.jpg"
                   alt="Screen Illustrations"
                 />
                 <p class="overlay">
@@ -463,7 +502,14 @@
             </li>
             <li class="card-portfolio">
               <div class="img-box">
-                <img src="./images/online-courses.jpg" alt="Online Courses" />
+                <img
+                  srcset="
+                    ./images/online-courses@1x.jpg 1x,
+                    ./images/online-courses@2x.jpg 2x
+                  "
+                  src="./images/online-courses@1x.jpg"
+                  alt="Online Courses"
+                />
                 <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -484,66 +530,68 @@
 
     <footer class="footer-page">
       <div class="container">
-        <div class="footer-logo-box">
-          <a class="footer-logo" href="./index.html"
-            >Web<span class="addition">Studio</span></a
-          >
-          <p class="footer-text">
-            Increase the flow of customers and sales for your business with
-            digital marketing & growth solutions.
-          </p>
-        </div>
-
         <!-- Footer social media -->
 
-        <div class="footer-social-media">
-          <p class="footer-title">Social media</p>
-          <ul class="footer-social-links-list">
-            <li class="social-links-container">
-              <a
-                href="https://www.instagram.com/"
-                target="_blank"
-                class="social-link footer-link"
-              >
-                <svg class="social-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-instagram"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social-links-container">
-              <a
-                href="https://www.twitter.com/"
-                target="_blank"
-                class="social-link footer-link"
-              >
-                <svg class="social-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-twitter"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social-links-container">
-              <a
-                href="https://www.facebook.com/"
-                target="_blank"
-                class="social-link footer-link"
-              >
-                <svg class="social-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-facebook"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social-links-container">
-              <a
-                href="https://www.linkedin.com/"
-                target="_blank"
-                class="social-link footer-link"
-              >
-                <svg class="social-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-linkedin"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
+        <div class="container-social-media">
+          <div class="footer-logo-box">
+            <a class="footer-logo" href="./index.html"
+              >Web<span class="addition">Studio</span></a
+            >
+            <p class="footer-text">
+              Increase the flow of customers and sales for your business with
+              digital marketing & growth solutions.
+            </p>
+          </div>
+
+          <div class="footer-social-media">
+            <p class="footer-title">Social media</p>
+            <ul class="footer-social-links-list">
+              <li class="social-links-container">
+                <a
+                  href="https://www.instagram.com/"
+                  target="_blank"
+                  class="social-link footer-link"
+                >
+                  <svg class="social-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-links-container">
+                <a
+                  href="https://www.twitter.com/"
+                  target="_blank"
+                  class="social-link footer-link"
+                >
+                  <svg class="social-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-links-container">
+                <a
+                  href="https://www.facebook.com/"
+                  target="_blank"
+                  class="social-link footer-link"
+                >
+                  <svg class="social-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-links-container">
+                <a
+                  href="https://www.linkedin.com/"
+                  target="_blank"
+                  class="social-link footer-link"
+                >
+                  <svg class="social-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
 
         <!-- Footer subscribe -->
@@ -651,8 +699,10 @@
                   <use href="./images/icons.svg#click-checkbox"></use>
                 </svg>
               </span>
-              I accept the terms and conditions of the
-              <a class="text-privacy-policy" href="">Privacy Policy</a>
+              <span
+                >I accept the terms and conditions of the
+                <a class="text-privacy-policy" href="">Privacy Policy</a>
+              </span>
             </label>
           </div>
           <button class="button-order" type="submit">Send</button>
@@ -663,40 +713,38 @@
     <!-- Modal window for mobile menu -->
 
     <div class="modal-window-mobile-menu">
-      <div class="form-mobile-menu">
+      <form class="form-mobile-menu">
         <button class="button-close menu-button" type="button">
           <svg class="button-icon" width="8" height="8">
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
-        <div class="modal-menu-container">
-          <ul class="modal-menu">
-            <li class="modal-header-link-item">
-              <a
-                class="modal-header-link modal-current-page"
-                href="./index.html"
-                >Studio</a
-              >
-            </li>
-            <li class="modal-header-link-item">
-              <a class="modal-header-link" href="">Portfolio</a>
-            </li>
-            <li class="modal-header-link-item">
-              <a class="modal-header-link" href="">Contacts</a>
-            </li>
-          </ul>
+        <ul class="modal-menu">
+          <li class="modal-header-link-item">
+            <a class="modal-header-link modal-current-page" href="./index.html"
+              >Studio</a
+            >
+          </li>
+          <li class="modal-header-link-item">
+            <a class="modal-header-link" href="">Portfolio</a>
+          </li>
+          <li class="modal-header-link-item">
+            <a class="modal-header-link" href="">Contacts</a>
+          </li>
+        </ul>
+        <div class="menu-contacts">
           <address class="modal-contacts">
             <ul class="modal-header-contact-list">
-              <li>
-                <a class="modal-contacts-link" href="mailto:info@devstudio.com"
-                  >info@devstudio.com</a
-                >
-              </li>
               <li>
                 <a
                   class="modal-contacts-link modal-phone"
                   href="tel:+110001111111"
                   >+11 (000) 111-11-11</a
+                >
+              </li>
+              <li>
+                <a class="modal-contacts-link" href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
                 >
               </li>
             </ul>
@@ -750,7 +798,7 @@
             </ul>
           </div>
         </div>
-      </div>
+      </form>
     </div>
   </body>
 </html>
